fixing the animation of Collapse

--- a/assets/scss/base/_breakpoints.scss
+++ b/assets/scss/base/_breakpoints.scss
@@ -1,10 +1,10 @@
 @mixin tablet {
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 768px) {
         @content;
     }
 }
 @mixin desktop {
-    @media only screen and (min-width: 900px) {
+    @media only screen and (min-width: 1200px) {
         @content;
     }
 }
