--- a/assets/scss/molecules/_slider.scss
+++ b/assets/scss/molecules/_slider.scss
@@ -1,3 +1,75 @@
+.carousel{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__img{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+        object-position: center;
+        
+    }
+    &__box {
+        width: 1200px;
+        min-width: 300px;
+        margin: 0 50px;
+        
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        border: 2px solid #000a;
+        background: #DDD;
+        :nth-child(3) {
+            margin-bottom: 30px;
+        }
+        @include tablet {
+            width: 1200px;
+            min-width: 300px;
+            
+            display: flex;
+            justify-content: center;
+            flex-direction: row;
+            align-items: center;
+            border: 2px solid #000a;
+            background: #DDD;
+        }
+    }
+}
+
+.carousel {
+    .carousel__items {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        
+        width: 80%;
+        height: 100%;
+        background: #FFF;
+        text-align: center;
+        padding: 30px 25px 30px 25px;
+        margin-top: 30px;
+        border-radius: 10px;
+        @include tablet {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 25%;
+            height: 400px;
+            
+            background: #FFF;
+            text-align: center;
+            padding: 0 25px 0 25px;
+            margin: 30px 20px 30px 20px;
+        }
+    }
+}
+    
 .slider {
     display: flex;
     align-items: center;
@@ -47,14 +119,6 @@
                         width: 80%;
                         margin: 40px auto;
                         line-height: 1.3;
-                    }
-                    &__text {
-                        margin: 0 auto;
-                        opacity: .6;
-                    }
-                    &__profission {
-                        margin: 15px auto;
-                        opacity: .6;
                     }
                 }
             }
