--- a/assets/scss/molecules/_tabs.scss
+++ b/assets/scss/molecules/_tabs.scss
@@ -58,4 +58,5 @@
     border-right: 1px solid #ccc;
     border-bottom: none;
     font-weight: 700;
+    background: rgb(230, 221, 221);
 }
